--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tower-http = { version = "0.6.8", features = ["trace"] }
 chrono = "0.4.42"
 base64 = "0.22.1"
 dotenvy = "0.15.7"
+moka = {version = "0.12.11",features = ["sync"]}
 tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
 
 [workspace]
