--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.48.0", features = ["full"] }
-yrs = { path = "libs/yrs" }
+yrs = { path = "libs/yrs", features = ["sync"]}
 async-trait = "0.1.89"
 uuid = { version = "1.19.0", features = ["v4"] }
 serde_json = "1.0.145"
@@ -20,8 +20,10 @@ tower-http = { version = "0.6.8", features = ["trace"] }
 chrono = "0.4.42"
 base64 = "0.22.1"
 dotenvy = "0.15.7"
-moka = {version = "0.12.11",features = ["sync"]}
+moka = {version = "0.12.11",features = ["future"]}
 tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
+log = "0.4.29"
+futures-util = "0.3.31"
 
 [workspace]
 members = ["libs/yrs"]
