fix(nexus):支持基本的文档同步与广播

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,12 @@
+# server 配置
 HOST=0.0.0.0
 PORT=8888
 
+# nexus 配置
+DEBOUNCE=3
+MAX_DEBOUNCE=5
+
+# moka 配置
 MOKA_CAPACITY=1000000
 MOKA_TIME_TO_IDLE=3600
 
