--- a/.env
+++ b/.env
@@ -10,4 +10,13 @@ MAX_DEBOUNCE=5
 MOKA_CAPACITY=1000000
 MOKA_TIME_TO_IDLE=3600
 
+
+# postgresql配置
+PGHOST=193.168.2.100
+PGPORT=30724
+PGUSER=postgres
+PGPASSWORD=lnx@2025
+PGDATABASE=cses
+
+
 LOG_LEVEL=debug
