--- a/.env.sample
+++ b/.env.sample
@@ -10,4 +10,8 @@ MAX_DEBOUNCE=5
 MOKA_CAPACITY=1000000
 MOKA_TIME_TO_IDLE=3600
 
+# PostgreSQL 数据库配置（可选）
+# 如果配置了 DATABASE_URL，将自动启用 PostgreSQL 扩展
+# DATABASE_URL=postgres://username:password@localhost:5432/nexus
+
 LOG_LEVEL=debug
