--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ dotenvy = "0.15.7"
 moka = { version = "0.12.11", features = ["future"] }
 tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
 futures-util = "0.3.31"
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
 
 [workspace]
 members = ["libs/yrs"]
