--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ MOKA_CAPACITY=1000000
 MOKA_TIME_TO_IDLE=3600
 
 
-# postgresql配置
+# postgres配置
 PGHOST=193.168.2.100
 PGPORT=30724
 PGUSER=postgres
