env:修改moka容量为10000

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DEBOUNCE=3
 MAX_DEBOUNCE=5
 
 # moka 配置
-MOKA_CAPACITY=1000000
+MOKA_CAPACITY=10000
 MOKA_TIME_TO_IDLE=3600
 
 
@@ -19,4 +19,4 @@ PGPASSWORD=lnx@2025
 PGDATABASE=cses
 
 
-LOG_LEVEL=debug
+LOG_LEVEL=info
