--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "nexus"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+debug = []
+
 
 [profile.dev]
 opt-level = 0
@@ -24,6 +28,7 @@ panic = "abort"
 [dependencies]
 tokio = { version = "1.48.0", features = ["full"] }
 yrs = { path = "libs/yrs", features = ["sync"] }
+#yrs = { version = "0.25.0", features = ["sync"] }
 async-trait = "0.1.89"
 uuid = { version = "1.19.0", features = ["v4"] }
 serde_json = "1.0.145"
