--- a/.env
+++ b/.env
@@ -12,10 +12,10 @@ MOKA_TIME_TO_IDLE=3600
 
 
 # postgres配置
-PGHOST=193.168.2.100
-PGPORT=30724
+PGHOST=192.168.6.204
+PGPORT=5432
 PGUSER=postgres
-PGPASSWORD=lnx@2025
+PGPASSWORD=cses@2025
 PGDATABASE=cses
 
 
