fix:修改pre数据库环境

--- a/.env
+++ b/.env
@@ -12,10 +12,10 @@ MOKA_TIME_TO_IDLE=3600
 
 
 # postgres配置
-PGHOST=192.168.6.204
-PGPORT=5432
+PGHOST=192.168.6.66
+PGPORT=32432
 PGUSER=postgres
-PGPASSWORD=cses@2025
+PGPASSWORD=one.2013
 PGDATABASE=cses
 
 
