--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@ MOKA_TIME_TO_IDLE=3600
 
 
 # postgres配置
-PGHOST=192.168.6.66
-PGPORT=32432
+PGHOST=localhost
+PGPORT=5432
 PGUSER=postgres
-PGPASSWORD=one.2013
-PGDATABASE=cses
+PGPASSWORD=postgres
+PGDATABASE=postgres
 
 
 LOG_LEVEL=debug
