--- a/.env.sample
+++ b/.env.sample
@@ -1,20 +1,22 @@
 # server 配置
 HOST=0.0.0.0
-PORT=8888
+PORT=1234
 
 # nexus 配置
 DEBOUNCE=3
 MAX_DEBOUNCE=5
 
 # moka 配置
-MOKA_CAPACITY=1000000
+MOKA_CAPACITY=10000
 MOKA_TIME_TO_IDLE=3600
 
-# postgresql配置
-PGHOST=193.168.2.100
-PGPORT=30724
+
+# postgres配置
+PGHOST=localhost
+PGPORT=5432
 PGUSER=postgres
-PGPASSWORD=lnx@2025
-PGDATABASE=cses
+PGPASSWORD=postgres
+PGDATABASE=postgres
+
 
 LOG_LEVEL=debug
